--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "better-auth": "^1.3.34",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
+    "framer-motion": "^12.23.24",
+    "gsap": "^3.13.0",
     "next": "16.0.1",
     "pg": "^8.16.3",
     "react": "19.2.0",
