--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gsap": "^3.13.0",
     "next": "16.0.1",
     "pg": "^8.16.3",
+    "query-string": "^9.3.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "uuid": "^13.0.0",
