--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
     "better-auth": "^1.3.34",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "drizzle-zod": "^0.8.3",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.555.0",
     "next": "16.0.1",
     "pg": "^8.16.3",
     "query-string": "^9.3.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.13",
     "zustand": "^5.0.8"
