--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "query-string": "^9.3.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.13",
